PRE MVP 1.5: Complete migration to Vite-only setup - Removed all static HTML/CSS/JS files - Updated package.json to use Vite scripts - Cleaned up project structure - Vite dev server now serves React app on port 3001

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "AI-Powered Nightlife Operations Platform - Pre-MVP 1.0",
   "main": "index.js",
   "scripts": {
-    "dev": "npx http-server . -p 3000 -o",
-    "start": "npx http-server . -p 3000",
-    "build": "echo 'Build process for production'",
+    "dev": "cd frontend && npm run dev",
+    "build": "cd frontend && npm run build",
+    "preview": "cd frontend && npm run preview",
     "test": "echo 'Run tests'",
     "deploy": "echo 'Deploy to production'"
   },
