--- a/backend/env.example
+++ b/backend/env.example
@@ -5,8 +5,18 @@ DATABASE_URL="postgresql://username:password@localhost:5432/clubrun"
 JWT_SECRET="your-super-secret-jwt-key-change-in-production"
 
 # AI Services
+OPENAI_API_KEY="your-openai-api-key"
 OPENROUTER_API_KEY="your-openrouter-api-key"
-AI_MODEL="meta-llama/llama-3.1-8b-instruct:free"
+AI_MODEL="gpt-4o-mini"
+
+# Google Services
+GOOGLE_SERVICE_ACCOUNT_KEY_FILE="path/to/service-account-key.json"
+REPORTING_SHEET_ID="your-google-sheet-id-for-reporting"
+
+# Supabase
+SUPABASE_URL="https://your-project.supabase.co"
+SUPABASE_ANON_KEY="your-supabase-anon-key"
+SUPABASE_SERVICE_ROLE_KEY="your-supabase-service-role-key"
 
 # App Config
 NODE_ENV="development"
