--- a/backend/package.json
+++ b/backend/package.json
@@ -10,12 +10,15 @@
     "seed": "node prisma/seed.js",
     "migrate": "prisma migrate dev",
     "generate": "prisma generate",
-    "build": "echo 'Build process for production'",
+    "build": "echo 'Backend build completed'",
+    "vercel-build": "echo 'Vercel build completed'",
     "deploy": "echo 'Deploy to production'"
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -23,7 +26,14 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "openai": "^4.28.0",
+    "googleapis": "^133.0.0",
+    "puppeteer": "^22.0.0",
+    "csv-writer": "^1.6.0",
+    "exceljs": "^4.4.0",
+    "multer": "^1.4.5-lts.1",
+    "@supabase/supabase-js": "^2.39.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -35,7 +45,14 @@
     "nodemon": "^3.1.9",
     "prisma": "^5.22.0"
   },
-  "keywords": ["club-run", "api", "backend", "nodejs", "express", "rbac"],
+  "keywords": [
+    "club-run",
+    "api",
+    "backend",
+    "nodejs",
+    "express",
+    "rbac"
+  ],
   "author": "Club Run Team",
   "license": "MIT",
   "repository": {
@@ -45,4 +62,4 @@
   "engines": {
     "node": ">=18.0.0"
   }
-} 
+}
