--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,8 @@
 # Database
-DATABASE_URL="postgresql://truecastlefilmsllc@localhost:5432/clubrun"
+DATABASE_URL="postgresql://username:password@localhost:5432/clubrun"
 
 # JWT
-JWT_SECRET="club-run-super-secret-jwt-key-2024-change-in-production"
+JWT_SECRET="your-super-secret-jwt-key-change-in-production"
 
 # AI Services
 OPENROUTER_API_KEY="your-openrouter-api-key"
@@ -15,4 +15,4 @@ FRONTEND_URL="http://localhost:3000"
 
 # Optional Services
 REDIS_URL="redis://localhost:6379"
-LOG_LEVEL="info"
+LOG_LEVEL="info" 
