--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,5 +1,5 @@
-# Frontend Dockerfile for Club Run
-FROM node:18-alpine
+# Multi-stage Frontend Dockerfile for Club Run
+FROM node:18-alpine AS base
 
 # Set working directory
 WORKDIR /app
@@ -13,8 +13,26 @@ RUN npm ci
 # Copy source code
 COPY . .
 
-# Expose port
+# Development stage
+FROM base AS development
 EXPOSE 3000
+CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
 
-# Start development server
-CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"] 
+# Build stage
+FROM base AS build
+RUN npm run build
+
+# Production stage
+FROM nginx:alpine AS production
+
+# Copy built files from build stage
+COPY --from=build /app/dist /usr/share/nginx/html
+
+# Copy nginx configuration
+COPY nginx.conf /etc/nginx/nginx.conf
+
+# Expose port
+EXPOSE 80
+
+# Start nginx
+CMD ["nginx", "-g", "daemon off;"] 
