--- a/backend/.env.backup2
+++ b/backend/.env.backup2
@@ -1,5 +1,5 @@
 # Database
-DATABASE_URL="postgresql://truecastlefilmsllc@localhost:5432/clubrun"
+DATABASE_URL="postgresql://username:password@localhost:5432/clubrun"
 
 # JWT
 JWT_SECRET="your-super-secret-jwt-key-change-in-production"
