--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,21 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "backend/src/simple-server.js",
-      "use": "@vercel/node"
+  "functions": {
+    "api/index.js": {
+      "maxDuration": 30
     }
-  ],
+  },
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "/api/index.js"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/backend/src/simple-server.js"
+      "dest": "/public/index.html"
     }
   ],
-  "env": {
-    "NODE_ENV": "production"
-  }
+  "buildCommand": "cd frontend && npm install && npm run build",
+  "outputDirectory": "public",
+  "installCommand": "npm install"
 } 
