Fix blank screen - Add Vite config, Tailwind setup, and SPA routing

--- a/vercel.json
+++ b/vercel.json
@@ -11,11 +11,15 @@
       "dest": "/api/index.js"
     },
     {
+      "src": "/assets/(.*)",
+      "dest": "/club-run-clean/frontend/dist/assets/$1"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/public/index.html"
+      "dest": "/club-run-clean/frontend/dist/index.html"
     }
   ],
-  "buildCommand": "cd frontend && npm install && npm run build",
-  "outputDirectory": "public",
+  "buildCommand": "cd club-run-clean/frontend && npm install && npm run build",
+  "outputDirectory": "club-run-clean/frontend/dist",
   "installCommand": "npm install"
 } 
