--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "club-run",
-  "version": "3.0.0-pre",
-  "description": "AI-Powered Nightlife Operations Platform - PRE MVP 3.0 (Docker Update)",
+  "version": "3.6.0-pre",
+  "description": "AI-Powered Nightlife Operations Platform - PRE MVP 3.6 (Production Ready)",
   "main": "api/index.js",
   "scripts": {
     "dev": "cd frontend && npm run dev",
@@ -16,24 +16,24 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@supabase/supabase-js": "^2.39.0",
     "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.4.5",
+    "exceljs": "^4.4.0",
     "express": "^4.19.2",
     "express-rate-limit": "^7.2.0",
+    "googleapis": "^133.0.0",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "socket.io": "^4.8.1",
-    "openai": "^4.28.0",
-    "googleapis": "^133.0.0",
-    "puppeteer": "^22.0.0",
-    "csv-writer": "^1.6.0",
-    "exceljs": "^4.4.0",
     "multer": "^1.4.5-lts.1",
-    "@supabase/supabase-js": "^2.39.0"
+    "openai": "^4.28.0",
+    "puppeteer": "^22.0.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -66,4 +66,4 @@
   "prisma": {
     "seed": "node backend/prisma/seed.js"
   }
-} 
+}
