--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,18 +11,19 @@
     "vercel-build": "npm run build"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0",
-    "lucide-react": "^0.263.1",
-    "typescript": "^5.0.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
-    "vite": "^4.4.5",
-    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.4.14",
+    "lucide-react": "^0.263.1",
     "postcss": "^8.4.27",
-    "autoprefixer": "^10.4.14"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.0",
+    "recharts": "^3.1.2",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.0.0",
