--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "club-run",
-  "version": "3.6.0-pre",
-  "description": "AI-Powered Nightlife Operations Platform - PRE MVP 3.6 (Production Ready)",
+  "version": "3.777.0",
+  "description": "AI-Powered Nightlife Operations Platform - PRE MVP 3.777 (Revolutionary Local Serato Verification)",
   "main": "api/index.js",
   "scripts": {
     "dev": "cd frontend && npm run dev",
@@ -26,6 +26,7 @@
     "exceljs": "^4.4.0",
     "express": "^4.19.2",
     "express-rate-limit": "^7.2.0",
+    "fs-extra": "^11.3.1",
     "googleapis": "^133.0.0",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
