--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@privy-io/server-auth": "^1.32.5",
     "@supabase/supabase-js": "^2.39.0",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
