--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "vercel-build": "npm run build"
   },
   "dependencies": {
+    "@privy-io/react-auth": "^1.99.1",
+    "@privy-io/wagmi-connector": "^0.1.13",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
@@ -23,7 +25,9 @@
     "recharts": "^3.1.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "viem": "^2.43.3",
+    "vite": "^4.4.5",
+    "wagmi": "^1.4.13"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.0.0",
