--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "club-run-backend",
-  "version": "1.0.0-pre",
-  "description": "Club Run Backend API - Pre-MVP 1.0",
+  "version": "4.1.0",
+  "description": "Club Run Backend API - Pre-MVP 4.1",
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
