--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,17 @@
   "version": 2,
   "functions": {
     "api/index.js": {
-      "maxDuration": 30,
-      "includeFiles": "backend/**"
+      "maxDuration": 30
+    },
+    "api/auth.js": {
+      "maxDuration": 30
     }
   },
   "routes": [
+    {
+      "src": "/api/auth/(.*)",
+      "dest": "/api/auth.js"
+    },
     {
       "src": "/api/(.*)",
       "dest": "/api/index.js"
@@ -25,5 +31,5 @@
   ],
   "buildCommand": "cd frontend && npm install && npm run build",
   "outputDirectory": "frontend/dist",
-  "installCommand": "npm install && cd backend && npm install"
+  "installCommand": "npm install"
 } 
